--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @album, :html => {:multipart => true} do |f| %>
+<%= form_for @album, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
   
 
     <%= f.label :name, :class => 'control-label' %>
@@ -7,16 +7,144 @@
       <%= f.text_field :name, :class => 'text_field' %>
     
 
-  <br/>
+ <div class="row fileupload-buttonbar">
 
-  <%= f.fields_for :images, Image.new do |ff| %>
-     <%= ff.label :image, "Upload Images", class: 'control-label' %>
-       
-         <%= ff.file_field :image, multiple: true, class: 'btn btn-file', id: 'upload-image', name: "album[images_attributes][][image]" %>
-  
+      <div class="span7"> 
+
+        <span class="btn btn-success fileinput-button">
+          <i class="glyphicon glyphicon-plus glyphicon-white"></i>
+          <input type="file" class="form-control"  name="album[images_attributes][][image]" multiple>Select
+        </span>
+ <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
+    </table>
+        <%= f.submit "submit", :class => "btn btn-primary start", :id => "startbutton" %>
+
+      </div>
+      
+    </div>
+<% end %>
+
+
+<script>
+    var fileUploadErrors = {
+    maxFileSize: 'File is too big',
+    minFileSize: 'File is too small',
+    acceptFileTypes: 'Filetype not allowed',
+    maxNumberOfFiles: 'Max number of files exceeded',
+    uploadedBytes: 'Uploaded bytes exceed file size',
+    emptyResult: 'Empty file upload result'
+    };
+  </script>
+
+  <!-- The template to display files available for upload -->
+  <script id="template-upload" type="text/x-tmpl">
+    {% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-upload fade">
+      <td class="preview"><span class="fade"></span></td>
+      <td class="name"><span>{%=file.name%}</span></td>
+      <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
+      {% if (file.error) { %}
+      <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
+      {% } else if (o.files.valid && !i) { %}
+      <td>
+        <div class="progress progress-success progress-striped active"><div class="bar progress-bar" style="width:0%;"></div></div>
+      </td>
+      <td class="start" style="display:none">{% if (!o.options.autoUpload) { %}
+        <button class="btn btn-primary">
+          <i class="icon-upload icon-white"></i>
+          <span>{%=locale.fileupload.start%}</span>
+        </button>
+        {% } %}</td>
+      {% } else { %}
+      <td colspan="2"></td>
+      {% } %}
+      <td class="cancel">{% if (!i) { %}
+        <button class="btn btn-warning" onclick="minus()">
+          <i class="icon-ban-circle icon-white"></i>
+          <span>{%=locale.fileupload.cancel%}</span>
+        </button>
+        {% } %}</td>
+    </tr>
+    {% } %}
+  </script>
+  <!-- The template to display files available for download -->
+  <script id="template-download" type="text/x-tmpl">
     
-  <% end %>
- <br/>
-    <%= f.submit "submit", :class => "btn btn-default" %>
- 
-  <% end %>
+  </script>
+
+  <script type="text/javascript" charset="utf-8">
+    var num_added = 0;
+    var added = 0;
+    var all_data = {};
+    function minus() {
+      num_added--;
+    };
+    function submit() {
+      if (num_added == 0) {
+        alert('1');
+        document.forms["fileupload"].submit();
+      }
+      
+    };
+    $(function () {
+
+        $('#startbutton').click(function() {
+          if (num_added == 0) {
+            alert('2');
+            document.forms["fileupload"].submit();
+          }
+
+        });
+
+        // Initialize the jQuery File Upload widget:
+        $('#fileupload').fileupload({
+          complete: function (e, data) {
+            
+            window.location = "<%= root_url %>";
+        },
+          singleFileUploads: false
+        })  .bind('fileuploadadd', function (e, data) {num_added++;})
+            .bind('fileuploadsubmit', function (e, data) {
+             if(added < num_added)
+                  {
+                  if (added == 0)
+                      all_data = data;
+                  else
+                      {
+                      $.each(data['files'], function(i, file){
+                      all_data['files'].push(file);
+                      });
+                      $.each(data['context'], function(i, context){
+                      all_data['context'].push(context);
+                      });
+                      }
+                  added++;
+                  if (added == num_added)
+                      {
+                      added++;
+                      all_data.submit();
+                      }
+                  return false;
+              }
+            })
+            .bind('fileuploadsend', function (e, data) {num_added = 0; added = 0;});
+            
+        // 
+        // Load existing files:
+        $.getJSON($('#fileupload').prop('action'), function (files) {
+          var fu = $('#fileupload').data('blueimpFileupload'), 
+            template;
+          fu._adjustMaxNumberOfFiles(-files.length);
+          console.log(files);
+          template = fu._renderDownload(files)
+            .appendTo($('#fileupload .files'));
+          // Force reflow:
+          fu._reflow = fu._transition && template.length &&
+            template[0].offsetWidth;
+          template.addClass('in');
+          $('#loading').remove();
+        });
+
+    });
+  </script>
+
