--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -1,72 +1,68 @@
 <%= form_for @album, :html => { :multipart => true, :id => "fileupload"  } do |f| %>
   
+     <%= f.label :name, :class => 'control-label' %>
+     <%= f.text_field :name, :class => 'text_field' %>
+    <br>
+    <%= f.label "Images", :class => 'control-label' %>
+     <% unless @album.new_record? && @album.images.present? %>
+        <% @album.images.each do |img| %>  
+          <%= image_tag img.image_url(:thumb) %>
+          <%= link_to 'Delete', '#', class: 'btn danger' %><br><br>
+        <% end %>
+      <% end %>
+    <hr>
+     <div class="row fileupload-buttonbar">
 
-    <%= f.label :name, :class => 'control-label' %>
-    
-
-      <%= f.text_field :name, :class => 'text_field' %>
-    
-
- <div class="row fileupload-buttonbar">
-
-      <div class="span7"> 
-
-        <span class="btn btn-success fileinput-button">
-          <i class="glyphicon glyphicon-plus glyphicon-white"></i>
-          <input type="file" class="form-control"  name="album[images_attributes][][image]" multiple>Select
-        </span>
- <table class="table table-striped"><tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
-    </table>
-        <%= f.submit "submit", :class => "btn btn-primary start", :id => "startbutton" %>
-
+        <div class="span7"> 
+          <span class="btn btn-success fileinput-button">
+            <input type="file" class="form-control"  name="album[images_attributes][][image]" multiple>
+            Browse Files
+          </span>
+         <table class="table table-striped">
+            <tbody class="files" data-toggle="modal-gallery" data-target="#modal-gallery"></tbody>
+         </table>
+          <%= f.submit "submit", :class => "btn btn-primary start", :id => "startbutton" %>
+        </div>
+        
       </div>
-      
-    </div>
-<% end %>
 
+<% end %>
 
 <script>
     var fileUploadErrors = {
-    maxFileSize: 'File is too big',
-    minFileSize: 'File is too small',
-    acceptFileTypes: 'Filetype not allowed',
-    maxNumberOfFiles: 'Max number of files exceeded',
-    uploadedBytes: 'Uploaded bytes exceed file size',
-    emptyResult: 'Empty file upload result'
+      maxFileSize: 'File is too big',
+      minFileSize: 'File is too small',
+      acceptFileTypes: 'Filetype not allowed',
+      maxNumberOfFiles: 'Max number of files exceeded',
+      uploadedBytes: 'Uploaded bytes exceed file size',
+      emptyResult: 'Empty file upload result'
     };
-  </script>
+</script>
 
   <!-- The template to display files available for upload -->
   <script id="template-upload" type="text/x-tmpl">
     {% for (var i=0, file; file=o.files[i]; i++) { %}
-    <tr class="template-upload fade">
-      <td class="preview"><span class="fade"></span></td>
-      <td class="name"><span>{%=file.name%}</span></td>
-      <td class="size"><span>{%=o.formatFileSize(file.size)%}</span></td>
+    <tr class="template-upload nofade">
+      <td class="preview"><span class="nofade"></span></td>
+      <td class="name">{%=file.name%}</td>
+      <td class="size">{%=o.formatFileSize(file.size)%}</td>
       {% if (file.error) { %}
-      <td class="error" colspan="2"><span class="label label-important">{%=locale.fileupload.error%}</span> {%=locale.fileupload.errors[file.error] || file.error%}</td>
+      <td class="error" colspan="2"><span class="label important">Error</span> {%=fileUploadErrors[file.error] || file.error%}</td>
       {% } else if (o.files.valid && !i) { %}
       <td>
-        <div class="progress progress-success progress-striped active"><div class="bar progress-bar" style="width:0%;"></div></div>
+        <div class="progress progress-success progress-striped active">
+          <div class="bar progress-bar" style="width:0%;"></div>
+        </div>
       </td>
-      <td class="start" style="display:none">{% if (!o.options.autoUpload) { %}
-        <button class="btn btn-primary">
-          <i class="icon-upload icon-white"></i>
-          <span>{%=locale.fileupload.start%}</span>
-        </button>
-        {% } %}</td>
+      <td class="start" style="display: none;">{% if (!o.options.autoUpload) { %}<button class="btn primary"><%= t('photos.template.start') %></button>{% } %}</td>
       {% } else { %}
       <td colspan="2"></td>
       {% } %}
-      <td class="cancel">{% if (!i) { %}
-        <button class="btn btn-warning" onclick="minus()">
-          <i class="icon-ban-circle icon-white"></i>
-          <span>{%=locale.fileupload.cancel%}</span>
-        </button>
-        {% } %}</td>
+      <td class="cancel">{% if (!i) { %}<button class="btn info" onclick="minus()"><%= t('photos.template.cancel') %></button>{% } %}</td>
     </tr>
     {% } %}
   </script>
+
   <!-- The template to display files available for download -->
   <script id="template-download" type="text/x-tmpl">
     
@@ -81,7 +77,6 @@
     };
     function submit() {
       if (num_added == 0) {
-        alert('1');
         document.forms["fileupload"].submit();
       }
       
@@ -90,7 +85,6 @@
 
         $('#startbutton').click(function() {
           if (num_added == 0) {
-            alert('2');
             document.forms["fileupload"].submit();
           }
 
@@ -99,10 +93,9 @@
         // Initialize the jQuery File Upload widget:
         $('#fileupload').fileupload({
           complete: function (e, data) {
-            
             window.location = "<%= root_url %>";
-        },
-          singleFileUploads: false
+          },
+          // singleFileUploads: false
         })  .bind('fileuploadadd', function (e, data) {num_added++;})
             .bind('fileuploadsubmit', function (e, data) {
              if(added < num_added)
@@ -111,39 +104,22 @@
                       all_data = data;
                   else
                       {
-                      $.each(data['files'], function(i, file){
-                      all_data['files'].push(file);
-                      });
-                      $.each(data['context'], function(i, context){
-                      all_data['context'].push(context);
-                      });
+                        $.each(data['files'], function(i, file){
+                          all_data['files'].push(file);
+                        });
+                        $.each(data['context'], function(i, context){
+                          all_data['context'].push(context);
+                        });
                       }
                   added++;
-                  if (added == num_added)
-                      {
-                      added++;
-                      all_data.submit();
-                      }
+                  if (added == num_added){
+                    added++;
+                    all_data.submit();
+                  }
                   return false;
               }
             })
             .bind('fileuploadsend', function (e, data) {num_added = 0; added = 0;});
-            
-        // 
-        // Load existing files:
-        $.getJSON($('#fileupload').prop('action'), function (files) {
-          var fu = $('#fileupload').data('blueimpFileupload'), 
-            template;
-          fu._adjustMaxNumberOfFiles(-files.length);
-          console.log(files);
-          template = fu._renderDownload(files)
-            .appendTo($('#fileupload .files'));
-          // Force reflow:
-          fu._reflow = fu._transition && template.length &&
-            template[0].offsetWidth;
-          template.addClass('in');
-          $('#loading').remove();
-        });
 
     });
   </script>
