--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,9 @@
     <div class="navbar navbar-static-top navbar-inverse">
       <div class="navbar-inner">
        <div class="container">
-        <a class="brand" href="#">Demo</a>
+        <%= link_to root_path, class: 'brand' do %>
+          Demo
+        <% end %>
         <ul class="nav">
           <li><%= link_to 'Albums', albums_path %></li>
         </ul>
